# PI-adaptDiv_journal_article

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
offline_study/ebnerd/: DB_connection.py  analyse_massive_simulation.ipynb  build_user_item_matrix.py  controller.py  diversification_strategies.py  diversity_metrics.py  load_data.py  recommendation_system.py  run_massive_simulations.py  simulation.py  user_behavior.py
offline_study/ebnerd/data/: base_mnl_a.py  parameters_adapt.csv  parameters_mmr.csv
offline_study/ebnerd/notebooks/: analyse_massive_simulation.ipynb
offline_study/mind/: DB_connection.py  build_user_item_matrix.py  controller.py  diversification_strategies.py  diversity_metrics.py  load_data.py  recommendation_system.py  run_massive_simulations.py  simulation.py  stats.py  user_behavior.py
offline_study/mind/data/: base_mnl_a.py  parameters_adapt.csv  parameters_mmr.csv
offline_study/mind/notebooks/: analyse_massive_simulations.ipynb
online_study/: DB_connection.py  diversity_metrics.py  load_data.py
online_study/data/experiment_phase/: behavior.csv  rating.csv  user.csv
online_study/data/training_phase/: rating.csv  user.csv  video.csv
online_study/notebooks/: experiment_analysis.ipynb
