[tool.poetry]
name = "pi-adaptdiv-journal-article"
version = "0.1.0"
description = ""
authors = ["Colin Timmers"]
readme = "README.md"
packages = [{include = "pi_adaptdiv_journal_article"}]

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
