[tool.poetry]
name = "pi-adaptdiv-journal-article"
version = "0.1.0"
description = ""
authors = ["Colin Timmers"]
readme = "README.md"
packages = [{include = "pi_adaptdiv_journal_article"}]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.2.3"
python-dotenv = "^1.1.0"
numpy = "2.0.1"
scipy = "1.13.1"
matplotlib = "3.9.2"
tqdm = "^4.67.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
